--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-markdown": "^9.0.3",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
