--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.2.0",
     "grecaptcha": "^1.0.3",
     "jspdf": "^2.5.2",
@@ -17,6 +21,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.1",
+    "twilio": "^5.4.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
